# srcom-book

./: .gitignore  Cargo.toml
.github/workflows/: build.yml
src/: auth.rs  db.rs  lib.rs  main.rs  srcom.rs
www/: package-lock.json  package.json  rollup.config.js
www/public/: global.css  index.html
www/src/: App.svelte
