[package]
name = "srcom-book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
axum = { version = "0.4.5", features = ["headers"] }
axum-macros = "0.1.0"
futures = "0.3.21"
http = "0.2.6"
iso8601-duration = "0.1.0"
lazy_static = "1.4.0"
md5 = "0.7.0"
reqwest = { version = "0.11.9", features = ["json", "rustls-tls", "tokio-rustls"], default-features = false }
rusqlite = { version = "0.26.3", features = ["bundled"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
serde_path_to_error = "0.1.7"
tokio = { version = "1.16.1", features = ["full"] }
tower = "0.4.11"
tower-http = { version = "0.2.2", features = ["cors"] }
